--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: Latest Postss
+title: An updated version of the original Ardour FLOSS manual
 description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
 image:
   feature: abstract-1.jpg
