--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: An updated version of the original Ardour FLOSS manual
+title: FLOSS MANUAL
 description: "Describe this nonsense."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
