--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "Describe this nonsense."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
 image:
-  feature: abstract-1.jpg
+  feature: ardour3-empty-session.jpg
   credit: dargadgetz
   creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
 ---
