--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: FLOSS MANUAL
-description: "Describe this nonsense."
+title: A FLOSS TUTORIAL
+description: "A Free, Libre, and Open Source Software Tutorial."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
 image:
