Change landing page image

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: post-index
-title: A FLOSS TUTORIAL
+title: FLOSS TUTORIAL
 description: "A Free, Libre, and Open Source Software Tutorial."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
 image:
-  feature: ardour3-empty-session.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: ardour3-splash-screen.png
+  credit: 
+  creditlink: 
 ---
 
 {% for post in paginator.posts %}
