--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "A Free, Libre, and Open Source Software Tutorial."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
 image:
-  feature: ardour3-splash-screen.png
+  feature: ardour3-icon.png
   credit: 
   creditlink: 
 ---
