--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: FLOSS TUTORIAL
+title: BEGINNER'S TUTORIAL
 description: "A Free, Libre, and Open Source Software Tutorial."
 tags: [Ardour, DAW, music, recording, electronic music]
 comments: false
